<resources>
    <string name="app_name">DiceRoller</string>
    <string name="d100">d100</string>
    <string name="d20">d20</string>
    <string name="d12">d12</string>
    <string name="d10">d10</string>
    <string name="d8">d8</string>
    <string name="d6">d6</string>
    <string name="d4">d4</string>
    <string name="press_on_dice">Press on dice:</string>
    <string name="history">History of rolls</string>


    <string name="memorize">Memory</string>
    <string name="first_die">First die</string>
    <string name="second_die">Second die</string>
    <string name="third_die">Third die</string>
    <string name="fourth_die">Fourth die</string>
</resources>