<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#329393"
    tools:context=".RollActivity">

    <TextView
        android:id="@+id/txtResultRoll"
        android:layout_width="230dp"
        android:layout_height="120dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/saoui"
        android:shadowColor="#9ad6ff"

        android:shadowRadius="0"
        android:text="@string/press_on_dice"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#9ad6ff"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/btnD20"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/d20"
        app:layout_constraintEnd_toStartOf="@+id/btnD10"
        app:layout_constraintTop_toTopOf="@+id/btnD10" />

    <Button
        android:id="@+id/btnD10"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="171dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="171dp"
        android:background="@drawable/d10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultRoll" />

    <Button
        android:id="@+id/btnD6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/d6"
        app:layout_constraintStart_toEndOf="@+id/btnD10"
        app:layout_constraintTop_toTopOf="@+id/btnD10" />

    <Button
        android:id="@+id/btnD12"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/d12"
        app:layout_constraintEnd_toStartOf="@+id/btnD8"
        app:layout_constraintTop_toTopOf="@+id/btnD8" />

    <Button
        android:id="@+id/btnD8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:alpha="1"
        android:background="@drawable/d8"
        app:layout_constraintEnd_toEndOf="@+id/btnD10"
        app:layout_constraintTop_toBottomOf="@+id/btnD10" />

    <Button
        android:id="@+id/btnD4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/d4"
        app:layout_constraintStart_toEndOf="@+id/btnD8"
        app:layout_constraintTop_toTopOf="@+id/btnD8" />

    <Button
        android:id="@+id/btnD100"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/d100"
        app:layout_constraintEnd_toEndOf="@+id/btnD8"
        app:layout_constraintTop_toBottomOf="@+id/btnD8" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMiniHistory"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/mini_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_d20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/d20"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/saoui"
        app:layout_constraintEnd_toEndOf="@+id/btnD20"
        app:layout_constraintStart_toStartOf="@+id/btnD20"
        app:layout_constraintTop_toBottomOf="@+id/btnD20" />

    <TextView
        android:id="@+id/text_d10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/d10"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/saoui"
        app:layout_constraintEnd_toEndOf="@+id/btnD10"
        app:layout_constraintStart_toStartOf="@+id/btnD10"
        app:layout_constraintTop_toBottomOf="@+id/btnD10" />

    <TextView
        android:id="@+id/text_d12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/d12"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/saoui"
        app:layout_constraintEnd_toEndOf="@+id/btnD12"
        app:layout_constraintStart_toStartOf="@+id/btnD12"
        app:layout_constraintTop_toBottomOf="@+id/btnD12" />

    <TextView
        android:id="@+id/text_d8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/d8"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/saoui"
        app:layout_constraintEnd_toEndOf="@+id/btnD8"
        app:layout_constraintStart_toStartOf="@+id/btnD8"
        app:layout_constraintTop_toBottomOf="@+id/btnD8" />

    <TextView
        android:id="@+id/text_d6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/d6"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/saoui"
        app:layout_constraintEnd_toEndOf="@+id/btnD6"
        app:layout_constraintStart_toStartOf="@+id/btnD6"
        app:layout_constraintTop_toBottomOf="@+id/btnD6" />

    <TextView
        android:id="@+id/text_d4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/d4"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/saoui"
        app:layout_constraintEnd_toEndOf="@+id/btnD4"
        app:layout_constraintStart_toStartOf="@+id/btnD4"
        app:layout_constraintTop_toBottomOf="@+id/btnD4" />

    <TextView
        android:id="@+id/text_d100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/d100"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/saoui"
        app:layout_constraintEnd_toEndOf="@+id/btnD100"
        app:layout_constraintStart_toStartOf="@+id/btnD100"
        app:layout_constraintTop_toBottomOf="@+id/btnD100" />


















</androidx.constraintlayout.widget.ConstraintLayout>